Fixed pre tag scrollbar visibility on code snippets

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -129,6 +129,10 @@ code, pre {
   font-size: 90%;
 }
 
+pre {
+  overflow: hidden !important;
+}
+
 ::selection {
     background: $primary;
     color: #000;
